fix(notification-toast): z-index over telekom-header (#1767)

--- a/packages/components/src/components/notification-toast/notification-toast.css
+++ b/packages/components/src/components/notification-toast/notification-toast.css
@@ -15,7 +15,7 @@
   --width-icon-container: 48px;
   --radius: var(--telekom-radius-standard);
   --background: var(--telekom-color-background-surface);
-  --z-index: 1;
+  --z-index: 100;
   /* FIXME:TOKEN not sure what elevation to use here */
   --box-shadow: var(--telekom-shadow-raised-standard);
 
